# STWEB_JS

./: Makefile  package-lock.json  process_state.json  pyproject.toml  test.py
apps/affiliates/: admin.py  enums.py  forms.py  models.py  selectors.py  services.py  urls.py  utils.py  views.py
apps/affiliates/static/css/: affiliates.css  base.css  catalog.css  certificate.css  coupons.css  feedback.css  footer.css  main.css  news.css  partners.css  privacy.css  question.css  register_login.css  sidebar.css  slider.css  table.css  timer.css  vacancy.css
apps/affiliates/static/images/: file.avif
apps/affiliates/static/js/: bonus.js  contact_sort.js  display_contact.js  filter.js  hover_effect.js  pagination.js  pagination_catalog.js  popup.js  settings.js  slider.js  style_controls.js  timer.js  validation.js
apps/affiliates/templates/agent_actions/: affiliate_contracts.html  affiliate_contracts_sorted.html  policy_create.html
apps/affiliates/templates/client_actions/: client_contracts.html  contract_create.html  contract_sign.html  policy_confirm.html  policy_detail.html  update_contract.html
apps/affiliates/templates/main/: affiliate_employee.html  affiliate_info.html  age_prediction.html  animation.html  animation_example.js  animation_examples.html  answer.html  background-animation.avif  base.html  birthdate.html  cat_fact.html  chart_graphic.html  company_info.html  contacts.html  coupons.html  feedback.html  insurance_catalog.html  main.html  news.html  (+12 more)
apps/users/: forms.py  models.py  services.py  utils.py  views.py
config/: settings.py  urls.py
(+15 files in other folders)
